2004-10-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tree.tcl (treetable_search_region): When
	a typeahead search in executed in a tree widget,
	deselect the previously selected index. This
	avoids a problem where it appears that multiple
	indexes are selected at the same time.

2004-05-10  Eric Lassauge  <lassauge@users.sourceforge.net>

	* NEWS: Note french support.
	* etc/Makefile.am: Install french.txt.
	* etc/Makefile.in: Regen.
	* etc/french.txt: Add French language translation.

2004-03-19  Mo DeJong  <mdejong@users.sourceforge.net>

	Add SN-52B2-2004-03-19 tag.

2004-03-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.TXT: Mention NEWS file.
	* gui/snpdbg.tcl: Remove debug puts.

2004-02-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* NEWS: Add note about save fix.
	* gui/editorpane.tcl (Close, wasClosed):
	* gui/multiview.tcl (Close, CountInstancesOfFile):
	When closing an editor window, don't ask to save
	if the same file is open in another editor.
	This is implemented by calling CountInstancesOfFile
	before calling Close for a editor. Also, set
 	a flag in the editor when the Close method is invoked,
	and then check this flag in CountInstancesOfFile
	to account for the case where one window has the
	same file open in two panes.

2004-02-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* NEWS: Add note about bracket/paren fix.
	* gui/editorpane.tcl (EditorBindings,
	x_Insert_Mark_Bracket): Adust begin and
	end highlight positions to account for
	binding order changes. A double click on
	a brace, bracket, or paren will now
	highlight to the matching bracket.
	[Bug 711358]

2004-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.am:
	* Makefile.in:
	* NEWS: Add DESTDIR support.

2004-01-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/snpdbg.tcl (snpdbg_parse_files): Rework
	the exec of cbrowser2 so that it works properly
	under Windows. Also, remove the .exe extension
	from the output printed to the files tab.
